# karma-system

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  alembic.ini  problems.md  pyproject.toml
app/: main.py
app/acl/: access_policy.py  dependencies.py  exceptions.py  use_cases.py
app/auth/: __init__.py  access_policy.py  config.py  consts.py  dependencies.py  dto.py  entity.py  exceptions.py  interfaces.py  lifespan.py  main.py  models.py  providers.py  routes.py  secuirty.py  service.py  session.py
app/base/: aggregate.py  config.py  db.py  dto.py  entity.py  event.py  exceptions.py  ioc.py  uow.py  use_cases.py  value_object.py
app/files/: __init__.py  entities.py  exceptions.py  main.py  models.py  providers.py  routes.py  services.py  value_objects.py
app/games/: __init__.py  exceptions.py  main.py  models.py  routes.py  services.py
app/infrastructure/: aggregate.py  config.py  dto.py  entity.py  ioc.py  uow.py  use_cases.py  value_object.py
app/karma/: __init__.py  calculations.py  consts.py  dependencies.py  entity.py  enums.py  main.py  models.py  requests.py  routes.py  services.py
app/module/: module.py
app/server/: _models.py  _routes.py  _services.py  dependencies.py  entity.py  exceptions.py  main.py  models.py  providers.py  responses.py  security.py  service.py  services.py  value_objects.py
app/templating/: main.py  provider.py
app/user/: __init__.py  _events.py  _models.py  _routes.py  _services.py  _use_cases.py  entities.py  enums.py  exceptions.py  main.py  models.py  security.py  service.py  services.py  value_objects.py
deploy/: .env.dist  Dockerfile  config.toml  config_example.toml  docker-compose-dev.yml  docker-compose.yml  redis.conf
docs/: architecture.md  termins.md  token-spec.md  use-cases.md
static/css/: about.css  account-info.css  base.css  global.css  home.css  index.css  information-about-server.css  owner-server-info.css  queued-servers.css  (+3 more)
(+148 files in other folders)
