[tool.poetry]
name = "karma-system"
version = "0.1.0"
description = ""
authors = ["pikoUsername <galymzhan.amantaj@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.104.1"
asyncpg = "^0.28.0"
sqlalchemy = "^2.0.22"
attrs = "^23.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
