[tool.poetry]
name = "karma-system"
version = "0.1.0"
description = ""
authors = ["pikoUsername <galymzhan.amantaj@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
fastapi = "^0.104.1"
asyncpg = "^0.28.0"
sqlalchemy = "^2.0.22"
attrs = "^23.1.0"
numpy = "^1.26.1"
orjson = "^3.9.10"
toml = "^0.10.2"
loguru = "^0.7.2"
uvicorn = "^0.23.2"
alembic = "^1.12.1"
pyright = "^1.1.334"
pytest = "^7.4.3"
pyjwt = "^2.8.0"
jinja2 = "^3.1.2"
bcrypt = "^4.1.1"
redis = "^5.0.1"
passlib = "^1.7.4"
python-multipart = "^0.0.6"
pydantic = {extras = ["email"], version = "^2.5.2"}
aiohttp = "^3.9.1"
aiofiles = "^23.2.1"
aioboto3 = "^12.1.0"
aiosmtplib = "^3.0.1"
fastapi-csrf-protect = "^0.3.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
